RESOLVED FIXED20117
setBaseAndExtent fails to reverse the current selection
https://bugs.webkit.org/show_bug.cgi?id=20117
Summary setBaseAndExtent fails to reverse the current selection
Nick Santos
Reported 2008-07-20 12:46:35 PDT
Repro steps: 1) Create a range with Javascript and set the base and extent as: range.setBaseAndExtent(start, 0, end, 0); and select it. 2) Creacte a range with Javascript and set the base and extent as: range.setBaseAndExtent(end, 0, start, 0); and select it. Expected result: The current selection should be reversed: end-to-start. Actual result: The current selection does not change when the second range is selected. See the attached link for a test case. Notice that if you clear the selection between the two steps, everything works as expected.
Attachments
proposed fix (4.14 KB, patch)
2008-07-21 03:55 PDT, Alexey Proskuryakov
mitz: review+
Alexey Proskuryakov
Comment 1 2008-07-21 03:55:22 PDT
Created attachment 22401 [details] proposed fix
mitz
Comment 2 2008-07-21 08:31:18 PDT
Comment on attachment 22401 [details] proposed fix r=me
Alexey Proskuryakov
Comment 3 2008-07-21 22:52:34 PDT
Committed revision 35284.
Note You need to log in before you can comment on or make changes to this bug.