        Reviewed by Dan Bernstein.

https://bugs.webkit.org/show_bug.cgi?id=20117
        setBaseAndExtent fails to reverse the current selection

        Test: editing/selection/setBaseAndExtent-revert-selection.html

        * editing/Selection.h: (WebCore::operator==): Compare direction, too.



Canonical link: https://commits.webkit.org/27715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35284 268f45cc-cd09-0410-ab3c-d52691b4dbfc